<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="edu.bu.widgetsexplore.MainActivity">


    <TextView
        android:id="@+id/textViewId_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:textAlignment="center"
        android:textSize="14pt"
        android:text="@string/profile"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewId_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextId_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints="true"
            android:hint="your name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewId_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/country" />

        <Spinner
            android:id="@+id/spinnerId_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/country_array" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxId_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_18_years_or_old" />

    <RadioGroup
        android:id="@+id/radioGroupId_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonId_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonId_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchId_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/made_to_public" />

    <TextView
        android:id="@+id/textViewId_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/comments" />


    <EditText
        android:id="@+id/editTextId_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="type your comments here"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/buttonId_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"/>
    <!--  android:onClick="onClickSubmit" /> -->

    <TextView
        android:id="@+id/textViewId_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_info" />

</LinearLayout>